[package]
name = "errvec"
version = "0.1.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "A 'multiple errors' structure that interoperates nicely"
keywords = ["error"]
categories = ["rust-patterns"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"
rust-version = "1.89"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
full = []

[dependencies]
itertools = "0.14.0"

[dev-dependencies]
thiserror = "2"
