[package]
name = "fslock-guard"
version = "0.8.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Wrapper around a lockfile with unlock-on-drop semantics"
keywords = ["fs", "file", "lock"]
categories = ["filesystem"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"
rust-version = "1.91"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
full = []

[dependencies]
thiserror = "2"

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[dev-dependencies]
test-temp-dir = { version = "0.8.0", path = "../test-temp-dir" }

