[package]
name = "tor-basic-utils"
version = "0.44.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "General helpers used by Tor"
keywords = ["tor", "arti"]
# We must put *something* here and this will do
categories = ["rust-patterns"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[dependencies]
derive-deftly = { version = "~1.11.3", features = ["full", "beta"] }
derive_more = { version = "2.0.1", features = ["full"] }
educe = "0.4.22"
extend = "1.2.0"
hex = "0.4"
itertools = "0.15.0"
paste = "1.0.3"
rand = "0.10.1"
rand_chacha = "0.10.0"
serde = { version = "1.0.103", optional = true, features = ["derive"] }
slab = "0.4.7"
smallvec = "1.10"
thiserror = "2"
tracing = "0.1"
weak-table = "0.3.0"
web-time-compat = { version = "0.2.0", path = "../web-time-compat" }

[dev-dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
educe = "0.4.22"
serde = { version = "1.0.103", features = ["derive"] }
serde-value = "0.7.0"
serde_json = "1.0.50"

[features]
full = ["serde", "web-time-compat/full"]

[package.metadata.docs.rs]
all-features = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", default-features = false }
