[package]
name = "tor-dirauth"
version = "0.43.0"
authors = ["The Tor Project, Inc.", "Ian Jackson <iwj@torproject.org>", "Clara Engler <cve@torproject.org>"]
edition = "2021"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Tor Directory Authority - core algoirithms"
keywords = ["tor", "arti"]
# We must put *something* here and this will do
categories = ["network-programming"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[features]
experimental = []
full = ["tor-netdoc/full"]
__is_experimental = []

[dependencies]
tor-netdoc = { version = "0.43.0", path = "../tor-netdoc", features = ["full", "experimental"] }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
