[package]
name = "tor-memquota-cost"
version = "0.44.0"
authors = ["The Tor Project, Inc.", "Ian Jackson <iwj@torproject.org>"]
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Low-level memory tracking traits, for use by Arti"
keywords = ["tor", "arti"]
categories = ["memory-management"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

[features]
full = ["memquota"]
default = []
memquota = []

[dependencies]
derive-deftly = { version = "~1.11.3", features = ["full", "beta"] }
itertools = "0.15.0"
paste = "1.0.3"
void = "1"

[dev-dependencies]
safelog = { path = "../safelog", version = "0.9.0" }
serde_json = "1.0.50"

[package.metadata.docs.rs]
all-features = true
