[package]
name = "keygen-openssh-test"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["The Tor Project, Inc.", "Gabriela Moldovan <gabi@torproject.org>"]
rust-version = "1.91"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Tool used by arti to generate OpenSSH keys for testing"

[dependencies]
base32 = "0.5"
clap = { version = "4.3.24", features = ["derive"] }
rand = "0.10.1"
ssh-key = { version = "0.6.7", package = "ssh-key-fork-arti", features = ["dsa", "alloc", "rand_core", "std"] }
tor-basic-utils = { path = "../../crates/tor-basic-utils", version = "0.43" }
tor-keymgr = { path = "../../crates/tor-keymgr", version = "0.43", features = ["keymgr"] }
tor-llcrypto = { path = "../../crates/tor-llcrypto", version = "0.43", features = ["relay", "rng-compat", "cvt-x25519"] }

[features]
full = ["tor-basic-utils/full", "tor-keymgr/full", "tor-llcrypto/full"]
